--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+   
+
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+   
+  "start": "react-app-rewired start",
+  
+   "build": "react-app-rewired build",
+
+   "test": "react-app-rewired test",
     "eject": "react-scripts eject"
-  },
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -36,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.4.0",
+    "react-app-rewired": "^2.1.8",
+    "rewire": "^5.0.0"
   }
 }
